fix: change tooltip z-index

--- a/src/less/style.less
+++ b/src/less/style.less
@@ -628,7 +628,7 @@
 
   .tui-chart-tooltip-area {
     position: absolute;
-    z-index: 501;
+    z-index: 1010;
     * {
       .user-select();
     }
